# Basilisk-Hunter

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING.txt  README.md  resources.rc
include/vietjtnguyen/: argagg.h
include/yhirose/: httplib.h
server/: server.py
src/: ArgumentParser.cpp  ArgumentParser.h  Basilisk.cpp  Basilisk.h  NonceUtil.cpp  NonceUtil.h  array_ios.h  generate_version.py  main.cpp  version.h
src/basilisk/: Basilisk.cpp  Basilisk.h  BasiliskWinner.cpp  BasiliskWinner.h  BasiliskWorker.cpp  BasiliskWorker.h  Batcher.h  Challenge.cpp  Challenge.h  ChallengeOperations.cpp  ChallengeOperations.h  Configuration.cpp  Configuration.h  HashSpeedometer.cpp  HashSpeedometer.h  Minimizer.cpp  Minimizer.h  RateLimitedWorker.cpp  RateLimitedWorker.h  Worker.cpp  Worker.h  WorkerBuilder.cpp  WorkerBuilder.h  WorkerPool.cpp  WorkerPool.h
src/crypto/: AbstractSHA256Impl.h  NonceUtil.h  SHA256.cpp  SHA256.h  SHA256Block.cpp  SHA256Block.h  SHA256CompressorFactory.cpp  SHA256CompressorFactory.h  SHA256CompressorInterface.cpp  SHA256CompressorInterface.h  SHA256Impl.cpp  SHA256Impl.h  SHA256ImplFactory.cpp  SHA256ImplFactory.h  SHA256ImplMetadata.cpp  SHA256ImplMetadata.h  SHA256State.cpp  SHA256State.h  SHA256Tester.cpp  SHA256Tester.h  alignment.h  bswap.h
src/crypto/impl/: SHA256AVX1Compressor.cpp  SHA256AVX1Compressor.h  SHA256AVX2Compressor.cpp  SHA256AVX2Compressor.h  SHA256ISHAExtCompressor.cpp  SHA256ISHAExtCompressor.h  SHA256Impl_ARMv8.cpp  SHA256Impl_ARMv8.h  SHA256Impl_AVX1.cpp  SHA256Impl_AVX1.h  SHA256Impl_AVX2.cpp  SHA256Impl_AVX2.h  SHA256Impl_Arm.cpp  SHA256Impl_Arm.h  SHA256Impl_ISHAExt.cpp  SHA256Impl_ISHAExt.h  SHA256Impl_Naive.cpp  SHA256Impl_Naive.h  SHA256Impl_SSE4.cpp  SHA256Impl_SSE4.h  SHA256NaiveCompressor.cpp  SHA256NaiveCompressor.h  SHA256SSE4Compressor.cpp  SHA256SSE4Compressor.h
src/crypto/impl/bits/: sha256_avx1.h  sha256_avx2_rorx2.h  sha256_ishaext.c  sha256_ishaext.h  sha256_sse4.h  sha256_sse4.yasm
src/crypto/impl/bits_arm/: sha256-armv8-aarch64.S  sha256-armv8.h
src/crypto/impl/bits_x86_64/: sha256_avx1.yasm  sha256_avx2_rorx2.yasm
src/io/: ArgumentParser.cpp  ArgumentParser.h  ChallengeValidator.cpp  ChallengeValidator.h  Challenge_json.cpp  Challenge_json.h  QEncoder.cpp  QEncoder.h  SHA256State_json.h  ServerSession.cpp  ServerSession.h
src/json/: Challenge_json.cpp  Challenge_json.h  SHA256State_json.cpp  Solution_json.cpp  Solution_json.h
src/model/: Challenge.cpp  Challenge.h  Configuration.cpp  Configuration.h  ConfigurationBuilder.cpp  ConfigurationBuilder.h  SharedChallenge.cpp  SharedChallenge.h  Solution.cpp  Solution.h
src/util/: ElapsedTimer.cpp  ElapsedTimer.h  LockBox.h  NonceUtil.cpp  NonceUtil.h  UrlParser.cpp  UrlParser.h
